--- a/P5.css
+++ b/P5.css
@@ -6,3 +6,14 @@
     height: 100px;
     background-color: honeydew;
 }
+
+#description, form{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+}
+
+#description{
+    text-align: center;
+    font-size: 20px;
+    position:relative;
+    top: -120px;
+}
