--- a/P5.css
+++ b/P5.css
@@ -14,6 +14,13 @@
 #description{
     text-align: center;
     font-size: 20px;
-    position:relative;
+    position: relative;
     top: -120px;
+}
+
+label, textarea, input, select{
+    position: relative;
+    left: 550px;
+    top: -50px;
+    line-height: 35px;
 }
